excluding swagger UI from secured APIs  - some basic swagger config